# Vehicle-Insurance-MLOps

./: LICENSE  README.md  crashcourse.txt  demo.py  project.txt  pyproject.toml  setup.py  template.py
notebook/: mongoDB_demo.ipynb
src/logger/: __init__.py
